--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,11 @@
   <body>
     
     <!-- NAVBAR -->
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
         <span class="navbar-brand mb-0 h1">SpaceX API</span>
       </div>
     </nav>
-
-    <h1>SPACE X CAPSULES </h1>
 
     <div id="root">
     
